enough with this new commit

--- a/template/adminTime.html
+++ b/template/adminTime.html
@@ -139,7 +139,7 @@
                 {% for i in data %}
                 <tr scope="row">
                     <th>{{i.timeId}}</th>
-                    <td>{{i.userId}}</td>
+                    <td>{{i.usrId}}</td>
                     <td>{{i.date}}</td>
                     <td>{{i.userClkIn}}</td>
                     <td>{{i.userClkOut}}</td>
