--- a/template/adminUsers.html
+++ b/template/adminUsers.html
@@ -10,74 +10,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    {% comment %} <script>
-            $(document).ready(function(){  
-                $("#clkInButt").click(function(){
-                    clkIn()
-                });
-                $("#clkOutButt").click(function(){
-                    clkOut()
-                });
-                $("#brkInButt").click(function(){
-                    brkIn()
-                });
-                $("#brkOutButt").click(function(){
-                    brkOut()
-                });
+    <script>
+        window.onload = function(){
+            setInterval(check, 60000);
+            // setInterval(prit, 1000);
+        };
+
+        // let counter = 0;
+        // function prit(){
+        //     counter++;
+        //     console.log("IT's RUNNINGGGGGGGGGGG!!!!!!!!!!", counter);
+        // }
+
+        function check(){
+            $.ajax({
+                url:'/checkpc/',
+                method: 'GET',
+                async: true,
+                cache: false,
+                success:function(data){
+                    alert(data.fail);
+                    // document.getElementById("brkOutButt").disabled = true;
+                }
             });
-            function clkIn(){
-                $.ajax({
-                    url:'/clkin/',
-                    method: 'POST',
-                    async: true,
-                    cache: false,
-                    success:function(data){
-                        alert(data.success);
-                        document.getElementById("clkInButt").disabled = true;
-                        document.getElementById("brkInButt").disabled = false;
-                    }
-                });
-            }
-            function clkOut(){
-                $.ajax({
-                    url:'/clkout/',
-                    method: 'POST',
-                    async: true,
-                    cache: false,
-                    success:function(data){
-                        alert(data.success);
-                        document.getElementById("clkOutButt").disabled = true;
-                        document.getElementById("brkInButt").disabled = true;
-                        document.getElementById("brkOutButt").disabled = true;
-                    }
-                });
-            }
-            function brkIn(){
-                $.ajax({
-                    url:'/brkin/',
-                    method: 'POST',
-                    async: true,
-                    cache: false,
-                    success:function(data){
-                        alert(data.success);
-                        document.getElementById("brkInButt").disabled = true;
-                        document.getElementById("brkOutButt").disabled = false;
-                    }
-                });
-            }
-            function brkOut(){
-                $.ajax({
-                    url:'/brkout/',
-                    method: 'POST',
-                    async: true,
-                    cache: false,
-                    success:function(data){
-                        alert(data.success);
-                        document.getElementById("brkOutButt").disabled = true;
-                    }
-                });
-            }
-        </script> {% endcomment %}
+        }
+    </script>
+    
+    
 
     <title>Admin | Users</title>
 </head>
@@ -130,6 +89,8 @@
                     <th scope="col">User Id</th>
                     <th scope="col">User Name</th>
                     <th scope="col">User password</th>
+                    <th scope="col">has User Logged in</th>
+                    <th scope="col">has User Clocked in</th>
                     <th scope="col">Action</th>
                 </tr>
             </thead>
@@ -141,6 +102,8 @@
                     <th>{{i.userId}} <input type="hidden" name="id" class="form-control" id="userId" value="{{i.userId}}"> </th>
                     <td>{{i.userName}}</td>
                     <td>{{i.userPass}}</td>
+                    <td>{{i.hasLoggedIn}}</td>
+                    <td>{{i.hasClockedIn}}</td>
                     <td><button type="submit" class="btn btn-danger">Delete</button></td>
                 </tr>
                 </form>
@@ -148,7 +111,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="3"></td>
+                    <td colspan="5"></td>
                     <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#userForm">Add new User</button></td>
                 </tr>
             </tfoot>
